Invite project mmembers overlay dropdown overflow fix
Changelog: fixed
EE: true

--- a/ee/app/assets/stylesheets/pages/groups.scss
+++ b/ee/app/assets/stylesheets/pages/groups.scss
@@ -46,6 +46,7 @@
 .invite-modal-content {
   grid-row: 1;
   grid-column: 1;
+  min-width: 0;
 }
 
 
